--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 
     <form  id="idForm" action="">
-        <input type="text" placeholder="Nombre" id="nombreForm">
+        <input type="text" placeholder="Nombres" id="nombreForm">
         <input type="text" placeholder="Apellido" id="apellidoForm">
         <button type="submit" class="btn btn-warning">Submit</button>
     </form>
